cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
project(PartitionORAM LANGUAGES CXX)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(client)
add_subdirectory(server)
add_subdirectory(protos)
add_subdirectory(base)